altered name for publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "machine_learning",
+  "name": "neural_net_type_trainer",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
